<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanActivity">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="0dp"
        android:layout_height="422dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TXT_scan_status"
        android:layout_width="309dp"
        android:layout_height="38dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="25dp"
        android:text="@string/TXT_scan"
        android:textAlignment="center"
        android:textColor="#1976D2"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surfaceView" />

    <Button
        android:id="@+id/B_scancode"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="8dp"
        android:onClick="resendCode"
        android:text="@string/B_resendcode"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/B_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TXT_scan_status" />

    <Button
        android:id="@+id/B_clear"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:onClick="cleanCode"
        android:text="@string/B_clear"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/B_scancode"
        app:layout_constraintTop_toBottomOf="@+id/TXT_scan_status" />

</androidx.constraintlayout.widget.ConstraintLayout>